objects/Communication_List__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communication Lists</relationshipLabel>
        <relationshipName>Communication_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Name__c</fullName>
        <formula>Communication__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communication Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <referenceTo>Communication__c</referenceTo>
        <relationshipLabel>Communication Lists</relationshipLabel>
        <relationshipName>Communication_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communication Lists</relationshipLabel>
        <relationshipName>Communication_Lists</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <formula>TEXT(Communication__r.Delivery_Mode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_From__c</fullName>
        <label>Preference From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preference_To__c</fullName>
        <label>Preference To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Opted_In__c</fullName>
        <label>Reason Opted In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Opted_Out__c</fullName>
        <label>Reason Opted Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt In</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Communication List</label>
    <nameField>
        <displayFormat>COM-{00000}</displayFormat>
        <label>Communication List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>